taki tam tescik

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container">
         <div class="navbar">
             <ul class="navbar__ul">
-                <li class="navbar__ul__li"><a class="navbar__ul__li__a" href="index2.html">MarCiN</a></li>
-                <li class="navbar__ul__li"><a class="navbar__ul__li__a" href="#">Album</a></li>
+                <li class="navbar__ul__li"><a class="navbar__ul__li__a" href="index.html">MarCiN</a></li>
+                <li class="navbar__ul__li"><a class="navbar__ul__li__a" href="index2.html">zobacz</a></li>
                 <li class="navbar__ul__li"><a class="navbar__ul__li__a" href="#">o mnie</a></li>
             </ul>
         </div>
@@ -68,7 +68,9 @@
                 pariatur iure.
             </div>
         </div>
-        <div class="footer">Siemano</div>
+        <div class="footer">
+            Wszelkie prawa zastrzeżone &copy;
+        </div>
         <script src="code.js"></script>
 </body>
 
