--- a/index2.html
+++ b/index2.html
@@ -6,10 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/style.min.css" />
 </head>
 
 <body>
-    Co tam mordo
+    <div class="index2">
+        <img src="dud2.png" alt="">
+
+        <div class="index2__text"></div>
+        <div class="index2__dziobak"> <img src="dziobak.png" alt=""></div>
+        <button class="index2__btn">Wróć</button>
+    </div>
+    <script src="cod2.js"></script>
 </body>
 
 </html>
